# lunchbox

./: .gitignore  NOTES.md  README.md  intro.py  justfile  pyproject.toml
lunchbox/alpha/: main.py
lunchbox/bravo/: main.py
lunchbox/charlie/: main.py
lunchbox/delta/: main.py
lunchbox/delta/modules/: __init__.py
lunchbox/delta/modules/chocolate/: __init__.py  main.py
lunchbox/delta/modules/strawberry/: __init__.py  main.py
lunchbox/delta/modules/vanilla/: __init__.py  main.py
